git-svn-id: svn://oss.dbc.dk/sync_php/php/OpenLibrary/OpenSearchAdmin/trunk@9230 30e9dc4a-7611-4fbc-83ba-eecf79b76bd0

--- a/NEWS.html
+++ b/NEWS.html
@@ -1,7 +1,10 @@
+<pre>
 0.2
 ===
+localIdentifier as "agency:local-id" - pick agency from localIdentifier
 Replaced localIdentifier with agencyId in updateObjectDkabm
 
 0.1
 ===
 first version
+</pre>
