--- a/NEWS.html
+++ b/NEWS.html
@@ -1,6 +1,10 @@
 <pre>
 0.2
 ===
+Dump recs created, copied, updated and deleted with verbose TRACE
+ip authentication
+copyObject determines type from objectIdentifier
+recognizing empty records
 localIdentifier as "agency:local-id" - pick agency from localIdentifier
 Replaced localIdentifier with agencyId in updateObjectDkabm
 
