idenfiers now just "something:something"
git-svn-id: svn://oss.dbc.dk/sync_php/php/OpenLibrary/OpenSearchAdmin/trunk@9489 30e9dc4a-7611-4fbc-83ba-eecf79b76bd0

--- a/NEWS.html
+++ b/NEWS.html
@@ -1,4 +1,8 @@
 <pre>
+0.3
+===
+idenfiers now just "something:something"
+
 0.2
 ===
 Dump recs created, copied, updated and deleted with verbose TRACE
