git-svn-id: svn://oss.dbc.dk/sync_php/php/OpenLibrary/OpenSearchAdmin/trunk@9850 30e9dc4a-7611-4fbc-83ba-eecf79b76bd0

--- a/NEWS.html
+++ b/NEWS.html
@@ -1,6 +1,7 @@
 <pre>
 0.3
 ===
+ShowInfo for maintenance purpose
 objectIdentifier in answer to create theme
 idenfiers now just "something:something"
 
