es_format in ini-file used as format in rec_control
git-svn-id: svn://oss.dbc.dk/sync_php/php/OpenLibrary/OpenSearchAdmin/trunk@27402 30e9dc4a-7611-4fbc-83ba-eecf79b76bd0

--- a/NEWS.html
+++ b/NEWS.html
@@ -1,4 +1,8 @@
 <pre>
+0.4
+===
+es_format in ini-file. For each agency, theme and dkabm should be set
+
 0.3
 ===
 ShowInfo for maintenance purpose
