git-svn-id: svn://oss.dbc.dk/sync_php/php/OpenLibrary/OpenSearchAdmin/trunk@27632 30e9dc4a-7611-4fbc-83ba-eecf79b76bd0

--- a/NEWS.html
+++ b/NEWS.html
@@ -1,7 +1,14 @@
 <pre>
+0.5
+===
+opensearchadmin.xsd changed
+createObject xml changed - added a <object> level
+
 0.4
 ===
+added <status>d</status> to the ES-delete record
 es_format in ini-file. For each agency, theme and dkabm should be set
+action: getTaskStatus 
 
 0.3
 ===
