git-svn-id: svn://oss.dbc.dk/sync_php/php/OpenLibrary/OpenSearchAdmin/trunk@30558 30e9dc4a-7611-4fbc-83ba-eecf79b76bd0

--- a/NEWS.html
+++ b/NEWS.html
@@ -1,7 +1,9 @@
 <pre>
 0.5
 ===
+namespace  http://oss.dbc.dk/ns/opensearchobject changed to  http://oss.dbc.dk/ns/opensearchobjects
 docbook
+wsdl changes
 opensearchadmin.xsd changed
 createObject xml changed - added a <object> level
 
