ver 1.0, delete createRelation and deleteRelation, thmes not allowed in createObject and deleteObject
git-svn-id: svn://oss.dbc.dk/sync_php/php/OpenLibrary/OpenSearchAdmin/trunk@30851 30e9dc4a-7611-4fbc-83ba-eecf79b76bd0

--- a/NEWS.html
+++ b/NEWS.html
@@ -1,15 +1,20 @@
 <pre>
+1.0
+===
+createRelation & deleteRelation removed
+Removed themes from createObject and deleteObject
+
 0.5
 ===
 namespace  http://oss.dbc.dk/ns/opensearchobject changed to  http://oss.dbc.dk/ns/opensearchobjects
 docbook
 wsdl changes
 opensearchadmin.xsd changed
-createObject xml changed - added a <object> level
+createObject xml changed - added a &lt;object&gt; level
 
 0.4
 ===
-added <status>d</status> to the ES-delete record
+added &lt;status&gt;d&lt;/status&gt; to the ES-delete record
 es_format in ini-file. For each agency, theme and dkabm should be set
 action: getTaskStatus 
 
